--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -3,32 +3,22 @@
    box-sizing: border-box;
 }
 
+body {
+   background-color: #f6f8fc;
+}
+
 .content{ 
+   width: 100vw;
+   height: 100vh;
    padding: 1rem;
+   background-color: #fff;
 }
 
-.content h1 {
-   margin: 0;
-}
-.Pokemons{
-   display: grid;
-   grid-template-columns: 1fr 1fr;
-   list-style: none;
-   padding: 0;
-   margin: 0;
-}
-
-.Pokemons {
-   display: flex;
-   flex-direction: column;
-   margin: .5rem;
-   padding: 1rem;
-   border-radius: 1rem;
-   background-color:#14A06F ;
-   color: #fff;
-}
-.Pokemons .detail img {
-   max-width: 100%;
-   height: 108px;
-   align-self: flex-end;
-}
+@media screen and (min-width: 992px) {
+   .content{
+      max-width: 992px;
+      height: auto;
+      margin: 1rem auto;
+      border-radius: 1rem;
+   }
+ }
