--- a/assets/css/pokedex.css
+++ b/assets/css/pokedex.css
@@ -1,9 +1,81 @@
-.pokemons{
+.pokemons {
    display: grid;
    grid-template-columns: 1fr;
    margin: 0;
    padding: 0;
    list-style: none;
+}
+
+.normal {
+   background-color: #a6a877;
+}
+
+.grass {
+   background-color: #77c850;
+}
+
+.fire {
+   background-color: #ee7f30;
+}
+
+.water {
+   background-color: #678fee;
+}
+
+.electric {
+   background-color: #f7cf2e;
+}
+
+.ice {
+   background-color: #98d5d7;
+}
+
+.ground {
+   background-color: #dfbf69;
+}
+
+.flying {
+   background-color: #a98ff0;
+}
+
+.poison {
+   background-color: #a040a0;
+}
+
+.fighting {
+   background-color: #bf3029;
+}
+
+.psychic {
+   background-color: #f65687;
+}
+
+.dark {
+   background-color: #725847;
+}
+
+.rock {
+   background-color: #b8a137;
+}
+
+.bug {
+   background-color: #a8b720;
+}
+
+.ghost {
+   background-color: #6e5896;
+}
+
+.steel {
+   background-color: #b9b7cf;
+}
+
+.dragon {
+   background-color: #6f38f6;
+}
+
+.fairy {
+   background-color: #f9aec7;
 }
 
 .pokemon {
@@ -12,26 +84,28 @@
    margin: .5rem;
    padding: 1rem;
    border-radius: 1rem;
-   background-color:#14A06F ;
 }
 
-.pokemon .number{
+.pokemon .number {
    color: #000;
    opacity: .3;
    text-align: right;
-   font-size: .725rem;
+   font-size: .625rem;
 }
 
-.pokemon .name{
+.pokemon .name {
+   text-transform: capitalize;
    color: #fff;
    margin-bottom: .25rem;
 }
+
 .pokemon .detail {
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: space-between;
 }
+
 .pokemon .detail .types {
    padding: 0;
    margin: 0;
@@ -39,12 +113,13 @@
 }
 
 .pokemon .detail .types .type {
-   background-color: #61e1ca;
    color: #fff;
    padding: .25rem .5rem;
-   margin: .25rem .25rem;
-   border-radius: .625rem;
-   font-size: .825rem;
+   margin: .25rem 0;
+   font-size: .625rem;
+   border-radius: 1rem;
+   filter: brightness(1.1);
+   text-align: center;
 }
 
 .pokemon .detail img {
@@ -52,28 +127,39 @@
    height: 70px;
 }
 
+.pagination {
+   display: flex;
+   flex-direction: row;
+   justify-content: center;
+   align-items: center;
+   width: 100%;
+   padding: 1rem;
+}
+
+.pagination button {
+   padding: .25rem .5rem;
+   margin: .25rem 0;
+   font-size: .625rem;
+   color: #fff;
+   background-color: #6c79db;
+   border: none;
+   border-radius: 1rem;
+}
+
 @media screen and (min-width: 380px) {
-   .pokemons{
-      grid-template-columns: 1fr 1fr ;
+   .pokemons {
+       grid-template-columns: 1fr 1fr;
    }
- }
+}
 
 @media screen and (min-width: 576px) {
-   .pokemons{
-      grid-template-columns: 1fr 1fr 1fr;
-      width: 75%;
+   .pokemons {
+       grid-template-columns: 1fr 1fr 1fr;
    }
-   
- }
+}
 
 @media screen and (min-width: 992px) {
-   .pokemons{
-      grid-template-columns: 1fr 1fr 1fr 1fr;
+   .pokemons {
+       grid-template-columns: 1fr 1fr 1fr 1fr;
    }
- }
-
- @media only screen and (max-width: 400px) {
-   .pokemons .pokemon {
-      width: 75%;
-   }
- }
+}
